# book_shelf

./: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: dev.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: books.rs  import.rs  mod.rs  scan.rs  tags.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.sql
src-tauri/src/services/: metadata.rs  mod.rs  repository.rs  scanner.rs  search.rs
src/api/: books.ts  import.ts  scan.ts  tags.ts  types.ts
src/components/: BookCard.tsx  BookDetail.tsx  BookGrid.tsx  BulkActionBar.tsx  ScanDialog.tsx  Sidebar.tsx  TagManager.tsx  Tooltip.tsx
src/hooks/: useBooks.ts
src/pages/: Home.tsx  ImportPage.tsx
src/store/: bookStore.ts  uiStore.ts
