[package]
name = "bookshelf"
version = "0.1.0"
description = "BookShelf - Local eBook Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "bookshelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
sha1 = "0.10"
epub = "2"
lopdf = "0.34"
zip = "0.6"
quick-xml = "0.31"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
